clusters/holton-talos-prod/vault/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui
  namespace: vault
spec:
  parentRefs:
  - name: vault-gateway
    namespace: vault
  hostnames:
  - secrets.holton.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault-vault-ui
      port: 8200
